--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "motion": "^12.23.22",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-bits": "^1.0.5",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
+    "react-native-web": "^0.21.2",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
